--- a/EventWorld.Web/Views/Shared/_Layout.cshtml
+++ b/EventWorld.Web/Views/Shared/_Layout.cshtml
@@ -3,11 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - EventWorld.Web</title>
+    <title>@ViewData["Title"] - EventWorld</title>
 
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" href="~/lib/alertify/css/alertify.css" />
+        <link rel="stylesheet" href="~/lib/alertify/css/default.css" />
     </environment>
+
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
@@ -16,45 +19,10 @@
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
-</head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EventWorld.Web</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
-                    <ul class="navbar-nav flex-grow-1">
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <div class="container">
-        <partial name="_CookieConsentPartial" />
-        <main role="main" class="pb-3">
-            @RenderBody()
-        </main>
-    </div>
-
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2020 - EventWorld.Web - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
-
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+        <script src="~/lib/alertify/js/alertify.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
@@ -72,7 +40,58 @@
     </environment>
     <script src="~/lib/knockout/knockout.js" asp-append-version="true"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+</head>
+<body>
+    <header id="ew-header">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+            <div class="container">
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">EventWorld</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Events</a>
+                        </li>
+                        <!-- ko ifnot: isAuthenticated -->
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="SignIn">Sign in</a>
+                        </li>
+                        <!-- /ko -->
+                        <!-- ko if: isAuthenticated -->
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="LogOut">Log out</a>
+                        </li>
+                        <!-- /ko -->
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="container">
+        <partial name="_CookieConsentPartial" />
+        <main role="main" class="pb-3">
+            <input type="hidden" id="is-authenticated" value="@User.Identity.IsAuthenticated.ToString()" />
+            <input type="hidden" id="first-name" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "FirstName").Select(x => x.Value).FirstOrDefault() : "")" />
+            <input type="hidden" id="last-name" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "LastName").Select(x => x.Value).FirstOrDefault() : "")" />
+            <input type="hidden" id="date-of-birth" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "DateOfBirth").Select(x => x.Value).FirstOrDefault() : "")" />
+            <input type="hidden" id="email" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "Email").Select(x => x.Value).FirstOrDefault() : "")" />
+            <input type="hidden" id="id" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "Id").Select(x => x.Value).FirstOrDefault() : "")" />
+            <input type="hidden" id="is-admin" value="@(User.Claims.Count() != 0 ? User.Claims.Where(x => x.Type == "IsAdmin").Select(x => x.Value).FirstOrDefault().ToString() : "")" />
+            @RenderBody()
+        </main>
+    </div>
 
+    <footer class="border-top footer text-muted">
+        <div class="container">
+            &copy; 2020 - EventWorld - <a asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+        </div>
+    </footer>
+    <script type="text/javascript">
+        EventWorld.Identity.init();
+    </script>
     @RenderSection("Scripts", required: false)
 </body>
 </html>
