--- a/EventWorld.Web/Views/Home/Index.cshtml
+++ b/EventWorld.Web/Views/Home/Index.cshtml
@@ -1,3 +1,37 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home";
 }
+
+<div class="ew-events" id="home-model">
+    <div class="home-carousel" data-bind="callFunction: getEvents">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" data-bind="foreach: events">
+                <div class="carousel-item" data-bind="css: {'active' : $rawData.isActive}">
+                    <img class="d-block w-100" data-bind="attr: {'src' : $rawData.imagePath}">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2 data-bind="text: $rawData.title"></h2>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+<script src="~/js/home.js"></script>
+<script type="text/javascript">
+    EventWorld.Home.init();
+</script>
+
