--- a/EventWorld.Web/wwwroot/css/site.css
+++ b/EventWorld.Web/wwwroot/css/site.css
@@ -43,7 +43,6 @@ html {
     position: relative;
     min-height: 100%;
     background: rgb( 59, 61, 71 );
-    overflow: hidden;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -107,7 +106,7 @@ body {
     margin-top: 2rem;
 }
 
-.login-container, .register-container, .ew-create-event, .events-header, .event-details-container, .user-info, .chat-header {
+.login-container, .register-container, .ew-create-event, .events-header, .event-details-container, .user-info, .chat-header, .home-carousel, .analytics-container {
     -webkit-animation: fadein 1.5s; /* Safari, Chrome and Opera > 12.1 */
     -moz-animation: fadein 1.5s; /* Firefox < 16 */
     -ms-animation: fadein 1.5s; /* Internet Explorer */
@@ -331,6 +330,7 @@ body {
 
 .events-subtitle {
     margin-bottom: 2.5rem;
+    text-align: start;
 }
 
 .search-input, .categories-dropdown {
@@ -675,7 +675,7 @@ span.filled:before {
     text-align: center;
 }
 
-.nav-chat{
+.nav-extra-element{
     margin-left: .625rem;
 }
 
@@ -755,4 +755,26 @@ span.filled:before {
 .chat-messages{
     display:flex;
     flex-direction: column;
+}
+
+.home-carousel{
+    width: 60%;
+    margin: 0 auto;
+}
+
+.home-carousel .carousel .carousel-inner .carousel-item img{
+    width: 555px;
+    height: 360px;
+    opacity: 0.5;
+}
+
+.analytics-top{
+    margin: 3.25rem 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.analytics-bot{
+    display:flex;
+    justify-content: center;
 }
