--- a/EventWorld.Web/wwwroot/css/site.css
+++ b/EventWorld.Web/wwwroot/css/site.css
@@ -778,3 +778,32 @@ span.filled:before {
     display:flex;
     justify-content: center;
 }
+
+.home-title{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 2.5rem;
+}
+
+.home-description{
+    margin-top: 5rem;
+}
+
+.home-text{
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+
+.home-left, .home-right{
+    width: 40%;
+}
+
+.home-left h3, .home-right h3 {
+    margin-bottom: 2.5rem;
+    text-align: center;
+}
+
+.carousel-item{
+    cursor: pointer;
+}
